# TwTxGNN

./: .gitignore  .scanignore  .semgrepignore  CITATION.cff  CLAUDE.md  CLAUDE_STATE.md  README.md  WORK_IN_PROGRESS.md  pyproject.toml  任務完成品質關卡.md
.github/: CODEOWNERS  ddi-versions.json  dependabot.yml
docs/: CNAME  DATA_SOURCES.md  Gemfile  _config.yml  about.md  blog.md  ddi.md  ddsi.md  dfi.md  dhi.md  download.md  downloads.md  drugs.md  evidence-high.md  evidence-low.md  evidence-medium.md  guide.md  index.md  methodology.md  nav-drugs.md  nav-help.md  nav-resources.md  nav-safety.md  news.md  privacy-policy.md  robots.txt  smart-guide.md  sources.md
prompts/: pharmacist_v5_storytelling.md
revamp/: CLAUDE.md
scripts/: add_ai_analysis.py  add_citation_disclaimer.py  add_drug_descriptions.py  add_related_drugs.py  add_social_share.py  analyze_unmapped_ingredients.py  batch_collect_bundles.py  batch_generate_reports.py  build_chembl_mapping.py  build_docs.py  build_pubchem_mapping.py  build_rxnorm_synonyms.py  check_clinicaltrials.py  check_pubmed.py  check_tfda.py  demo_ddinter.py  drug_list.json  generate_data_exports.py  generate_download_data.py  generate_fhir_resources.py  generate_news_keywords.py  generate_search_index.py  github_utils.py  integrate_dfi_dhi.py  integrate_predictions.py  preflight_check.py  process_ddinter_ddsi.py  process_ddinter_dfi.py  process_fda_data.py  process_news.py  regenerate_drug.py  regenerate_indication_content.py  restructure_reports.py  run_drug_validation.py  run_kg_prediction.py  run_txgnn_prediction.py  (+7 more)
seo/: CLAUDE.md
(+3140 files in other folders)
