[project]
name = "twtxgnn"
version = "0.1.0"
description = "台灣健保藥品老藥新用預測系統 - Drug Repurposing with TxGNN"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy<3",
    "openai>=1.0.0",
    "pandas>=2.2.0",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
    "responses>=0.25.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/twtxgnn"]
